refactor: improve handling of rest api filters
Simplify the logic in the FilterRepository class by
introducing a LinkedHashMap for correct filter ordering.
These changes are reflected in the related tests.

Add a note to mirror any changes in the FilterRepository
class to the InterceptorRepository class.